--- a/Uarung.API/appsettings.json
+++ b/Uarung.API/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "RedisOption" : "localhost:6379",
   "ConnectionStrings": {
     "DataAccessMySqlProvider": "server=localhost;userid=root;password=;database=uarungpos;"
   },
