--- a/Uarung.API/Uarung.API.csproj
+++ b/Uarung.API/Uarung.API.csproj
@@ -14,11 +14,13 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.3" />
     <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.1.2" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.1.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Uarung.Data\Uarung.Data.csproj" />
+    <ProjectReference Include="..\Uarung.Model\Uarung.Model.csproj" />
   </ItemGroup>
 
 </Project>
