--- a/Uarung.API/appsettings.json
+++ b/Uarung.API/appsettings.json
@@ -1,7 +1,8 @@
 {
   "RedisOption" : "localhost:6379",
   "ConnectionStrings": {
-    "DataAccessMySqlProvider": "server=localhost;userid=root;password=;database=uarungpos;"
+    "DataAccessMySqlProvider": "server=localhost;userid=root;password=;database=uarungpos;",
+    "DataAccessPostgreSqlProvider": "User ID=postgres;Password=merdeka;Host=localhost;Port=5432;Database=uarungpos;Pooling=true;"
   },
   "Logging": {
     "LogLevel": {
