--- a/Uarung.Web/appsettings.json
+++ b/Uarung.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ApiHost": "http://localhost:5001",
   "ApiLogin": "/login",
+  "ApiProduct": "/product/",
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
