--- a/Uarung.API/appsettings.json
+++ b/Uarung.API/appsettings.json
@@ -1,5 +1,6 @@
 {
-  "RedisOption" : "localhost:6379",
+  "RedisOption": "localhost:6379",
+  "SessionIdLifeTime": "5",
   "ConnectionStrings": {
     "DataAccessMySqlProvider": "server=localhost;userid=root;password=;database=uarungpos;",
     "DataAccessPostgreSqlProvider": "User ID=postgres;Password=merdeka;Host=localhost;Port=5432;Database=uarungpos;Pooling=true;"
