--- a/Uarung.Web/appsettings.json
+++ b/Uarung.Web/appsettings.json
@@ -2,6 +2,8 @@
   "ApiHost": "http://localhost:5001",
   "ApiLogin": "/login",
   "ApiProduct": "/product/",
+  "ApiProductCategory": "/productcategory/",
+  "SessionIdLifeTime": "20",
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
