implement insert product

--- a/Uarung.Web/Uarung.Web.csproj
+++ b/Uarung.Web/Uarung.Web.csproj
@@ -17,6 +17,9 @@
     <Content Update="Views\Product\Category.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
+    <Content Update="Views\Product\Add.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Update="Views\Product\Index.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
