--- a/Uarung.Web/appsettings.json
+++ b/Uarung.Web/appsettings.json
@@ -1,8 +1,9 @@
 {
   "ApiHost": "http://localhost:5001",
-  "ApiLogin": "/login",
-  "ApiProduct": "/product/",
-  "ApiProductCategory": "/productcategory/",
+  "ApiUrlLogin": "/login",
+  "ApiUrlProduct": "/product/",
+  "ApiUrlProductCategory": "/productcategory/",
+  "ApiUrlFileUpload": "/file/upload",
   "SessionIdLifeTime": "20",
   "Logging": {
     "LogLevel": {
