--- a/Uarung.Web/appsettings.json
+++ b/Uarung.Web/appsettings.json
@@ -7,7 +7,7 @@
   "SessionIdLifeTime": "20",
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Debug"
     }
   },
   "AllowedHosts": "*"
