--- a/Uarung.Web/appsettings.json
+++ b/Uarung.Web/appsettings.json
@@ -1,10 +1,14 @@
 {
-  "ApiHost": "http://localhost:5001",
-  "ApiUrlLogin": "/login",
-  "ApiUrlProduct": "/product/",
-  "ApiUrlProductCategory": "/productcategory/",
-  "ApiUrlFileUpload": "/file/upload",
-  "SessionIdLifeTime": "20",
+  "API.Host": "http://localhost:5001",
+  "API.Url.Login": "/login",
+  "API.Url.Product": "/product/",
+  "API.Url.ProductCategory": "/productcategory/",
+  "API.Url.Discount": "/discount/",
+  "API.Url.User": "/user/",
+  "API.Url.FileUpload": "/file/upload",
+  "Session.LifeTime": "20",
+  "Route.Default.Controller": "home",
+  "Route.Default.Action": "index",
   "Logging": {
     "LogLevel": {
       "Default": "Debug"
