--- a/Uarung.Web/appsettings.json
+++ b/Uarung.Web/appsettings.json
@@ -3,6 +3,9 @@
   "API.Url.Login": "/login",
   "API.Url.Product": "/product/",
   "API.Url.ProductCategory": "/productcategory/",
+  "API.Url.Transaction": "/transaction/",
+  "API.Url.Transaction.SetPaid": "/transaction/paid/",
+  "API.Url.Transaction.GetHold": "/transaction/holdonly/",
   "API.Url.Discount": "/discount/",
   "API.Url.User": "/user/",
   "API.Url.FileUpload": "/file/upload",
