implement printing transaction

--- a/Uarung.Web/Uarung.Web.csproj
+++ b/Uarung.Web/Uarung.Web.csproj
@@ -38,6 +38,9 @@
     <Content Update="Views\Home\Index.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
+    <Content Update="Views\Transaction\Print.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Update="Views\Transaction\Report.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
