--- a/Uarung.Web/appsettings.json
+++ b/Uarung.Web/appsettings.json
@@ -11,6 +11,8 @@
   "Session.LifeTime": "20",
   "Route.Default.Controller": "home",
   "Route.Default.Action": "index",
+  "Brand.Name": "Sawarna Seafood",
+  "Brand.Address": "Jakarta, Daerah Khusus Ibukota Jakarta, Indonesia",
   "Logging": {
     "LogLevel": {
       "Default": "Debug"
