--- a/Uarung.Web/appsettings.json
+++ b/Uarung.Web/appsettings.json
@@ -12,7 +12,7 @@
   "Route.Default.Controller": "home",
   "Route.Default.Action": "index",
   "Brand.Name": "Sawarna Seafood",
-  "Brand.Address": "Jakarta, Daerah Khusus Ibukota Jakarta, Indonesia",
+  "Brand.Address": "Jl. Kelapa Puan Raya, Blok AD 14 number.42-43, Serpong, Tangerang",
   "Logging": {
     "LogLevel": {
       "Default": "Debug"
