--- a/Uarung.Web/appsettings.json
+++ b/Uarung.Web/appsettings.json
@@ -5,6 +5,7 @@
   "API.Url.ProductCategory": "/productcategory/",
   "API.Url.Transaction": "/transaction/",
   "API.Url.Transaction.GetHold": "/transaction/holdonly/",
+  "API.Url.Transaction.Report": "/transaction/report",
   "API.Url.Discount": "/discount/",
   "API.Url.User": "/user/",
   "API.Url.FileUpload": "/file/upload",
