--- a/Uarung.Web/appsettings.json
+++ b/Uarung.Web/appsettings.json
@@ -6,6 +6,7 @@
   "API.Url.Transaction": "/transaction/",
   "API.Url.Transaction.GetHold": "/transaction/holdonly/",
   "API.Url.Transaction.Report": "/transaction/report",
+  "API.Url.Transaction.Cancel": "/transaction/cancel/",
   "API.Url.Discount": "/discount/",
   "API.Url.User": "/user/",
   "API.Url.FileUpload": "/file/upload",
