--- a/Uarung.Web/appsettings.json
+++ b/Uarung.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "API.Host": "http://localhost:5001",
-  "API.Url.Login": "/login",
+  "API.Url.Login": "/auth/login",
   "API.Url.Product": "/product/",
   "API.Url.ProductCategory": "/productcategory/",
   "API.Url.Transaction": "/transaction/",
