--- a/Uarung.Web/appsettings.json
+++ b/Uarung.Web/appsettings.json
@@ -14,8 +14,8 @@
   "Session.LifeTime": "20",
   "Route.Default.Controller": "home",
   "Route.Default.Action": "index",
-  "Brand.Name": "Sawarna Seafood",
-  "Brand.Address": "Jl. Kelapa Puan Raya, Blok AD 14 number.42-43, Serpong, Tangerang",
+  "Brand.Name": "Sawarna",
+  "Brand.Address": "Jl. Raya Serang - Pandeglang KM 7, Curug, Kota Serang, Banten",
   "Logging": {
     "LogLevel": {
       "Default": "Debug"
